<resources>
    <string name="app_name">Quick POS</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Demo User</string>
    <string name="nav_header_subtitle">09978776570</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_refresh">Refresh</string>
    <string name="menu_home">Home</string>
    <string name="menu_sale">Sale</string>
    <string name="menu_sale_order">Sale Order</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_report">Report</string>
    <string name="menu_logout">Exit</string>
    <string name="menu_notification">Notification</string>
    <string name="menu_sale_edit">Sale Edit</string>
    <string name="report_sale_order_item">Sale Order Item Report</string>
    <string name="user_name">User Name</string>
    <string name="phone">Phone</string>
    <string name="shop_name">Shop Name</string>
    <string name="township">Township</string>
    <string name="register">Register</string>
    <string name="address">Address</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="c">C</string>
    <string name="del">DEL</string>
    <string name="enter_password">Enter your password</string>
    <string name="enter_new_password">Enter your new password</string>
    <string name="enter_confirm_password">Enter your confirm password</string>
    <string name="bluetooth_printer_setting">Bluetooth Printer Setting</string>
    <string name="profile_detail">Profile Detail</string>
    <string name="update_profile">Update Profile</string>
    <string name="code_name">Code/Name</string>
    <string name="pay">Pay</string>
    <string name="hash">#</string>
    <string name="description">Description</string>
    <string name="amount">Amount</string>
    <string name="multiple">\u0020*\u0020</string>
    <string name="pay_confirm">Pay Confirm</string>
    <string name="customer">Customer</string>
    <string name="location">Location</string>
    <string name="payment">Payment</string>
    <string name="advanced_pay">Advanced Pay</string>
    <string name="ok">OK</string>
    <string name="voucher_discount_colon">Voucher Discount:</string>
    <string name="voucher_discount">Voucher Discount</string>
    <string name="discount">Discount</string>
    <string name="debt">(Debt)</string>
    <string name="dollar_sign">$</string>
    <string name="percent_sign">%</string>
    <string name="colon_sign">:</string>
    <string name="payment_method">Payment Method</string>
    <string name="paid_amount_colon">Paid Amount:</string>
    <string name="change_amount_colon">Change Amount:</string>
    <string name="percent">Percent</string>
    <string name="bank_pay">Bank/Pay</string>
    <string name="remark">Remark</string>
    <string name="categories">Categories</string>
    <string name="add_to_order">Add To Order</string>
    <string name="order_summary">Order Summary</string>
    <string name="order_detail">Order Detail</string>
    <string name="order_success">Order Success</string>
    <string name="order">Order</string>
    <string name="total_colon">Total:</string>
    <string name="total">Total</string>
    <string name="space">\u0020</string>
    <string name="order_receive_message">Your order has been successfully received.</string>
    <string name="date">Date</string>
    <string name="order_number">Order Number</string>
    <string name="total_amount">Total Amount</string>
    <string name="print">Print</string>
    <string name="subtotal_colon">Subtotal:</string>
    <string name="tax_colon">Tax:</string>
    <string name="charges_colon">Charges:</string>
    <string name="tax">Tax</string>
    <string name="charges">Charges</string>
    <string name="grandtotal_colon">Grandtotal:</string>
    <string name="sale_completed">Sale Completed</string>
    <string name="bluetooth_printer_mac_address">Bluetooth Printer Mac Address</string>
    <string name="find_printer">Find Printer</string>
    <string name="paper_width">Paper Width (mm)</string>
    <string name="save_printer">Save Printer</string>
    <string name="test_print">Test Print</string>
    <string name="paper_width_58">58</string>
    <string name="paper_width_80">80</string>
    <string name="choose_paper_width">Choose Paper Width</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="notification_setting">Notification Setting</string>
    <string name="notification_access">Notification Access</string>
    <string name="notification_message">You can get notifications for product updates.</string>
    <string name="product">Product</string>
    <string name="all_product">All Product</string>
    <string name="start_keyword">Start Keyword:\u0020</string>
    <string name="no_product_message">There is no product for this searching keyword.</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="retry">Retry</string>
    <string name="division">Division</string>
    <string name="fill_customer_information">Fill Walk in Customer Information</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="contact_person">Contact Person</string>
    <string name="customer_detail">Customer Detail</string>
    <string name="str_continue">Continue</string>
    <string name="order_confirm">Order Confirm</string>
    <string name="sale_summary">Sale Summary</string>
    <string name="sale_item">Sale Item</string>
    <string name="date_filter">Date Filter</string>
    <string name="specific_date_filter">Filter by Specific Date</string>
    <string name="from_to_date_filter">Filter by From Date/To Date</string>
    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>
    <string name="cancel">Cancel</string>
    <string name="quantity">Quantity</string>
    <string name="current_order">Current Order</string>
    <string name="order_history">Order History</string>
    <string name="category_filter">Category Filter</string>
    <string name="loading">Loading...</string>
    <string name="enter_value">Please enter a value!</string>
    <string name="division_not_found">Division not found.Check your internet connection!</string>
    <string name="township_not_found">Township not found.</string>
    <string name="already_register_phone">Already register with this phone.</string>
    <string name="register_success">Register success.</string>
    <string name="success">Success</string>
    <string name="incorrect_confirm_password">Incorrect confirm password!</string>
    <string name="incorrect_password">Incorrect password!</string>
    <string name="enter_your_phone">Enter your phone number</string>
    <string name="registration_not_found">Not found registration data with this phone number.Check your number and try again!</string>
    <string name="product_not_found_by_value">Not found product for this search value!</string>
    <string name="pay_foc">Pay FOC</string>
    <string name="confirm">Confirm</string>
    <string name="delete_confirm_message">Are you sure you want to delete?</string>
    <string name="product_not_found_by_menu">Not found product for this menu!</string>
    <string name="product_not_found">Not found product!</string>
    <string name="advanced_pay_colon">Advanced Pay:</string>
    <string name="invalid_percent_value">Invalid Percent Value!</string>
    <string name="invalid_discount_amount">Invalid! Voucher discount is greater than grand total.</string>
    <string name="limited_day">Limited Day</string>
    <string name="enter_valid_value">Enter valid value!</string>
    <string name="invalid_advanced_pay">Invalid! Advanced pay is greater than grand total.</string>
    <string name="invalid_paid_grand_total">Invalid! Paid amount is less than grand total.</string>
    <string name="invalid_paid_advanced_pay">Invalid! Paid amount is less than advanced pay.</string>
    <string name="something_wrong">Something wrong!</string>
    <string name="already_exist_customer_phone">Already exist customer with this phone.</string>
    <string name="slip_no">Slip No.</string>
    <string name="back">Back</string>
    <string name="all">All</string>
    <string name="added">Added</string>
    <string name="already_in_order">Already in your order!</string>
    <string name="order_date">Order Date</string>
    <string name="summary">Summary</string>
    <string name="exit_confirm_message">Are you sure you want to exit?</string>
    <string name="customer_not_found">Customer not found.Check your internet connection!</string>
    <string name="printer_not_found">Printer not found.</string>
    <string name="printing">Printing</string>
    <string name="bluetooth_tethering_fail">Bluetooth Tethering Fail,Try Again!</string>
    <string name="turn_on">Turn On</string>
    <string name="require_storage_permission">Require Storage Permission, Please allow this permission in App SystemSetting.</string>
    <string name="storage_path">QuickPOS</string>
    <string name="sale_bill_png">salebill.png</string>
    <string name="price">Price</string>
    <string name="qty">Qty</string>
    <string name="printer">Printer</string>
    <string name="bluetooth_printer_setup_message">Setup Bluetooth Printer in App Setting Menu!</string>
    <string name="bluetooth_off_message">Bluetooth Off! Please Turn On.</string>
    <string name="bluetooth_printer_disconnect_message">Bluetooth printer not found or disconnected! Check your printer is Off!</string>
    <string name="bluetooth_printer_ready">Bluetooth Printer Ready!</string>
    <string name="enter_verify_code">Enter the code to Verify your phone</string>
    <string name="sms_code_message">We have sent you an SMS with a code to the number\u0020</string>
    <string name="incorrect_otp">Incorrect OTP</string>
    <string name="invalid_verification">Invalid number and verification failed!</string>
    <string name="code_sent">Code Sent!</string>
    <string name="verification_completed">Verification Completed!</string>
    <string name="new_product">New Product</string>
    <string name="mark_all_read">Mark All as Read</string>
    <string name="updated_new_products">\u0020updated their new products!</string>
    <string name="updated_order">Updated Order</string>
    <string name="total_product">Total Product</string>
    <string name="today_sale">Today Sale</string>
    <string name="total_sale">Total Sale</string>
    <string name="total_order">Total Order</string>
    <string name="exit_app">Exit App?</string>
    <string name="check_client">Checking Client...</string>
    <string name="data_loading">Data Loading...</string>
    <string name="invalid_user">Invalid User</string>
    <string name="invalid_user_message">Your account has been deleted.Please register again.</string>
    <string name="sign_in_phone">Sign in with Phone...</string>
    <string name="get_token">Getting Token...</string>
    <string name="save_token">Saving Token...</string>
    <string name="pay_discount">Pay Discount</string>
    <string name="delete_item">Delete Item</string>
    <string name="cancel_foc">Cancel FOC</string>
    <string name="edit_discount">Edit Discount</string>
    <string name="remove_discount">Remove Discount</string>
    <string name="location_setting">Location Setting</string>
</resources>