<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_sale"
            android:icon="@drawable/ic_sale_24"
            android:title="@string/menu_sale" />
        <item
            android:id="@+id/nav_sale_order"
            android:icon="@drawable/ic_sale_order_24"
            android:title="@string/menu_sale_order" />
        <item
            android:id="@+id/nav_notification"
            android:icon="@drawable/ic_notifications_24"
            android:title="@string/menu_notification"
            app:actionViewClass="android.widget.TextView"/>
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person_24"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_settings_24"
            android:title="@string/menu_setting" />
        <item
            android:id="@+id/nav_report"
            android:icon="@drawable/ic_flag_24"
            android:title="@string/menu_report" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout_24"
            android:title="@string/menu_logout" />
    </group>
</menu>