<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.bosictsolution.invsale.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_sale"
        android:name="com.bosictsolution.invsale.ui.sale.SaleFragment"
        android:label="@string/menu_sale"
        tools:layout="@layout/fragment_sale" />

    <fragment
        android:id="@+id/nav_sale_order"
        android:name="com.bosictsolution.invsale.ui.saleorder.SaleOrderFragment"
        android:label="@string/menu_sale_order"
        tools:layout="@layout/fragment_sale_order" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.bosictsolution.invsale.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_setting"
        android:name="com.bosictsolution.invsale.ui.setting.SettingFragment"
        android:label="@string/menu_setting"
        tools:layout="@layout/fragment_setting" />
</navigation>