<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/white">

    <LinearLayout style="@style/DialogLayout"
        android:gravity="center">

        <TextView android:id="@+id/tvTitle"
            style="@style/DialogTitle" />

        <ImageButton android:id="@+id/btnClose"
            style="@style/DialogClose"/>

    </LinearLayout>

    <View style="@style/Divider"/>

    <LinearLayout style="@style/DialogLayout"
        android:orientation="vertical">

        <TextView android:id="@+id/tvPayDiscount"
            android:text="@string/pay_discount"
            android:drawableLeft="@drawable/ic_discount_24"
            style="@style/SaleItemMenuTextView"
            android:drawableTint="@color/primary_500"
            android:background="@drawable/border_bottom"/>

        <TextView android:id="@+id/tvEditDiscount"
            android:text="@string/edit_discount"
            android:drawableLeft="@drawable/ic_discount_24"
            style="@style/SaleItemMenuTextView"
            android:drawableTint="@color/primary_500"
            android:background="@drawable/border_bottom"/>

        <TextView android:id="@+id/tvRemoveDiscount"
            android:text="@string/remove_discount"
            android:drawableLeft="@drawable/ic_discount_24"
            style="@style/SaleItemMenuTextView"
            android:drawableTint="@color/black_soft"
            android:background="@drawable/border_bottom"/>

        <TextView android:id="@+id/tvPayFOC"
            android:text="@string/pay_foc"
            android:drawableLeft="@drawable/ic_giftcard_24"
            style="@style/SaleItemMenuTextView"
            android:background="@drawable/border_bottom"/>

        <TextView android:id="@+id/tvCancelFOC"
            android:text="@string/cancel_foc"
            android:drawableLeft="@drawable/ic_giftcard_24"
            style="@style/SaleItemMenuTextView"
            android:drawableTint="@color/black_soft"
            android:background="@drawable/border_bottom"/>

        <TextView android:id="@+id/tvDeleteItem"
            android:text="@string/delete_item"
            android:drawableLeft="@drawable/ic_clear_24"
            style="@style/SaleItemMenuTextView"
            android:drawableTint="@color/red"
            android:background="@drawable/border_bottom"/>

    </LinearLayout>

</LinearLayout>