<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BTPrinterSettingActivity"
    android:padding="10dp"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:background="@drawable/bd_gray_1r_white">

        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button android:id="@+id/btnFindPrinter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/find_printer"
                android:drawableLeft="@drawable/ic_search_24"
                android:drawableTint="@color/white"/>

            <EditText android:id="@+id/etBluetoothPrinter"
                style="@style/DefaultEditText"
                android:hint="@string/bluetooth_printer_mac_address"
                android:enabled="false"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:drawableRight="@drawable/ic_bluetooth_24"
                android:drawableTint="@color/gray"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp">

            <TextView
                style="@style/DefaultTextView"
                android:text="@string/paper_width"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton android:id="@+id/rdo58"
                    style="@style/DefaultRadioButton"
                    android:text="@string/paper_width_58" />

                <RadioButton android:id="@+id/rdo80"
                    style="@style/DefaultRadioButton"
                    android:text="@string/paper_width_80"
                    android:layout_marginLeft="20dp"/>

            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <Button
                android:id="@+id/btnTestPrint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_transparent"
                android:drawableLeft="@drawable/ic_print_24"
                android:drawableTint="@color/primary_500"
                android:text="@string/test_print"
                android:textColor="@color/primary_700" />

            <Button
                android:id="@+id/btnSavePrinter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:text="@string/save_printer"
                android:drawableLeft="@drawable/ic_save_24"
                android:drawableTint="@color/white"/>

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>

