<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/white">

    <LinearLayout style="@style/DialogLayout"
        android:gravity="center">

        <TextView android:text="@string/date_filter"
            style="@style/DialogTitle" />

        <ImageButton android:id="@+id/btnClose"
            style="@style/DialogClose"/>

    </LinearLayout>

    <View style="@style/Divider"/>

    <LinearLayout style="@style/DialogLayout"
        android:orientation="vertical">

        <RadioButton android:id="@+id/rdoDate"
            style="@style/DefaultRadioButton"
            android:text="@string/specific_date_filter" />

        <RadioButton android:id="@+id/rdoFromToDate"
            style="@style/DefaultRadioButton"
            android:text="@string/from_to_date_filter" />

    </LinearLayout>

</LinearLayout>