<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignInActivity"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@color/primary_500"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher_foreground2"
            android:paddingTop="80dp" />

        <TextView style="@style/AppName"
            android:text="@string/sign_in"
            android:layout_marginBottom="20dp"
            android:textColor="@color/gray_soft"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        android:focusable="false"
        android:focusableInTouchMode="true">

        <TextView android:id="@+id/tvTitle"
            android:text="@string/enter_your_phone"
            style="@style/TitleTextView" />

        <com.google.android.material.textfield.TextInputLayout android:id="@+id/inputPhone"
            style="@style/TextInputLayout"
            app:boxBackgroundMode="none">
            <EditText android:id="@+id/etPhone"
                style="@style/ColorEditText"
                android:hint="@string/phone"
                android:inputType="number"
                android:imeOptions="actionDone"
                android:layout_marginTop="10dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button android:id="@+id/btnContinue"
            android:text="@string/str_continue"
            style="@style/DefaultButton"
            android:layout_marginTop="20dp"/>

    </LinearLayout>

</LinearLayout>